# Cold

./: CMakeLists.txt  README.md  goals.txt
Assets/Models/falcon/: falcon.mtl
Assets/Models/sponza/: sponza.mtl
Assets/cottage_obj/: cottage_obj.mtl
libs/Windows/: assimp-vc143-mtd.lib
src/: Application.cpp  Application.h  comman_data.h  includes.h  main.cpp
src/CameraSystem/: CameraSystem.cpp  CameraSystem.h
src/EventSystem/: EventHandler.h  EventSystem.cpp  EventSystem.h  EventSystemHelper.cpp  EventSystemHelper.h  Events.h
src/FrontEnd/: MainGUI.cpp  MainGUI.h
src/Globals/: g_EngineData.cpp  g_EngineData.h
src/ShaderCode/: ShaderGetter.h
src/ShaderCode/FragShaders/: frag_3D.frag
src/ShaderCode/VertShaders/: vert_3D.vert
src/ThreadPool/: ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  Worker.cpp  Worker.h
src/UI_Utils/: AssetLoaderUI.cpp  AssetLoaderUI.h
src/Utility/: Logger.cpp  Logger.h  common_structs.h  helper.h
src/Utility/Clock/: Clock.cpp  Clock.h
src/WindowSystem/: GWindow.cpp  GWindow.h  InputSystem.cpp  InputSystem.h  WindowSystemUtility.cpp
src/opengl_backend/: BackendConfigData.h  RendererBackend.cpp  RendererBackend.h  Vertexbuffer.h  playground.h  test_data.h
src/opengl_backend/GLCommandCentre/: GLCommandCentre.cpp  GLCommandCentre.h
src/opengl_backend/Geometry/: Geometry.cpp  Geometry.h  GeometrySystem.cpp  GeometrySystem.h  MeshSystem.cpp  MeshSystem.h  StaticMesh.cpp  StaticMesh.h  VertexStructures.h
src/opengl_backend/Shader/: ShaderSystem.cpp  ShaderSystem.h
src/opengl_backend/Shaders/: ShaderSystem.cpp  ShaderSystem.h
src/opengl_backend/Textures/: TextureSystem.cpp  TextureSystem.h
src/opengl_backend/UI/: i_UIComponent.h
src/opengl_backend/UI/Buttons/: Button.cpp  Button.h
src/opengl_backend/UI/Inputs/: DragInput.cpp  DragInput.h  InputText.cpp  InputText.h
src/opengl_backend/UI/Text/: Text.cpp  Text.h
src/opengl_backend/UI/UIHolder/: UIHolder.cpp  UIHolder.h
src/opengl_backend/Utils/: BackendUtil.cpp  BackendUtil.h  ModelLoader.cpp  ModelLoader.h  Transforms.cpp  Transforms.h
src/opengl_backend/buffers/: VertexArrayBuffer.cpp  VertexArrayBuffer.h  Vertexbuffer.cpp  Vertexbuffer.h
